# ozz_rendering

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  WEBGPU_IMPL_LOG.md  main.cpp  main_again.cpp  main_webgpu.cpp  stb_image.h
assets/shaders/basic/: basic.frag  basic.vert
docs/: README.md  shader-abstractions-and-material-layer.md  vulkan-rhi-implementation-plan.md
docs/ai-conversations/: adding-vertex-buffers.md  entity_renderer_uniforms_rhi_plan.md  opengl-buffer-design-considerations.md  rhi-buffer-vulkan-getdescriptor.md  rhi-texture-copybuffer-lights-gap-analysis.md  rhi-uniforms-descriptors-and-lights-migration.md  shader-abstractions-and-material-layer.md  vulkan-rhi-implementation-plan.md
ozz_rendering/: CMakeLists.txt
ozz_rendering/include/ozz_rendering/: physical_devices.h  profiling.h  rhi.h  rhi_backend.h  rhi_barrier.h  rhi_buffer.h  rhi_descriptors.h  rhi_device.h  rhi_handle.h  rhi_pipeline_state.h  rhi_renderpass.h  rhi_shader.h  rhi_texture.h  rhi_types.h  vulkan_queue.h
ozz_rendering/include/ozz_rendering/scratch/: core.h  vulkan_shader.h
ozz_rendering/include/ozz_rendering/utils/: enums.h  resource_pool.h
ozz_rendering/src/: core.cpp  physical_devices.cpp  resource_pool.h  rhi.cpp  rhi_device.cpp  util.cpp  vulkan_queue.cpp  vulkan_shader.cpp
ozz_rendering/src/slang/: slang_compile.cpp  slang_compile.h
ozz_rendering/src/vulkan/: rhi_buffer_vulkan.cpp  rhi_buffer_vulkan.h  rhi_device_vulkan.cpp  rhi_device_vulkan.h  rhi_shader_vulkan.cpp  rhi_shader_vulkan.h  rhi_texture_vulkan.cpp  rhi_texture_vulkan.h  rhi_vulkan_shader.cpp  rhi_vulkan_shader.h  vma.cpp
ozz_rendering/src/vulkan/scratch/: core.cpp  util.cpp  vulkan_queue.cpp  vulkan_shader.cpp
ozz_rendering/src/vulkan/utils/: initialization.h  physical_devices.cpp  physical_devices.h  rhi_vulkan_types.h  shader_reflection.h
ozz_rendering/src/webgpu/: rhi_buffer_webgpu.h  rhi_device_webgpu.cpp  rhi_device_webgpu.h  rhi_shader_webgpu.cpp  rhi_shader_webgpu.h  rhi_texture_webgpu.h
ozz_rendering/src/webgpu/utils/: pipeline_cache.h  push_constants.h  rhi_webgpu_types.h
ozz_vk/: CMakeLists.txt
ozz_vk/include/ozz_vk/: core.h  physical_devices.h  util.h  vulkan_queue.h  vulkan_shader.h
ozz_vk/src/: core.cpp  physical_devices.cpp  util.cpp  vulkan_queue.cpp  vulkan_shader.cpp
ozz_vk/src/glslang/: resources.cpp
